Sat Oct 23 15:57:00 BST 2004  Olly Betts <olly@survex.com>

	* configure.ac,tcl8/Makefile.am: Use the TCL_STUBS mechanism so that
	  compiled extensions are portable between different versions of Tcl.
	  This needs Tcl 8.1, so bump the required Tcl version (was 8.0).
	  Also install in the directory above $tcl_library so the built
	  extension can be found by other Tcl versions.

Fri Oct 22 03:24:11 BST 2004  Olly Betts <olly@survex.com>

	* php4/docs/bindings.html,python/docs/bindings.html,
	  tcl8/docs/bindings.html: Mention the example scripts near the start
	  of the documentation, not right at the end.
	* php4/docs/bindings.html: Remove documentation explicitly saying
	  how we wrap Xapian::QueryParser and Xapian::Stem since we wrap them
	  exactly as we wrap everything else we don't mention! 

Fri Oct 22 03:21:20 BST 2004  Olly Betts <olly@survex.com>

	* tcl8/.cvsignore,tcl8/Makefile.am: Pass -pkgversion to SWIG to set
	  the Tcl package version; create pkgIndex.tcl so the package can
	  be loaded in the usual Tcl way; install in "xapian<VERSION>"
	  subdirectory of the Tcl library directory, as is the convention.

Fri Oct 22 02:36:00 BST 2004  Olly Betts <olly@survex.com>

	* tcl8/docs/bindings.html: Added documentation for tcl8.

Fri Oct 22 02:21:48 BST 2004  Olly Betts <olly@survex.com>

	* python/docs/examples/simpleexpand.py,
	  python/docs/examples/simplematchdecider.py,
	  python/docs/examples/simplesearch.py: Changed to use James' newly
	  wrapped Query from list of terms ctor.
	* python/docs/examples/simplematchdecider.py: Make the example
	  MatchDecider exclude documents matching a value, rather than a term.
	  The latter is a very inefficient way to do what AND_NOT does, and
	  we don't want examples to mislead like that.

Thu Oct 21 18:00:14 BST 2004  Olly Betts <olly@survex.com>

	* python/docs/bindings.html: Note that you can construct a query
	  from a list of terms, even if you can't from a list of queries.
	  Add HTML links to the examples.