@@ -12,7 +12,7 @@ in the bindings, so generally it should just work as expected.
 <p>
 The <code>examples</code> subdirectory contains examples showing how to use the
 Tcl8 bindings based on the simple examples from <code>xapian-examples</code>:
-<!-- <a href="examples/simpleindex.tcl">simpleindex.tcl</a>, -->
+<a href="examples/simpleindex.tcl">simpleindex.tcl</a>,
 <a href="examples/simplesearch.tcl">simplesearch.tcl</a>.
 <!-- <a href="examples/simpleexpand.py">simpleexpand.py</a>. -->
 </p>
