@@ -1,3 +1,8 @@
+Sun Oct 24 01:54:17 BST 2004  Olly Betts <olly@survex.com>
+
+	* tcl8/docs/bindings.html,tcl8/docs/examples/simpleindex.tcl: Added
+	  Tcl version of simpleindex from xapian-examples.
+
 Sat Oct 23 15:57:00 BST 2004  Olly Betts <olly@survex.com>
 
 	* configure.ac,tcl8/Makefile.am: Use the TCL_STUBS mechanism so that
